--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ body{
     width:100%;
     height:90%;
   }
+  .nav {
+    background-color: #333;
+  }
   .navigation-tl{
     display: flex;
     justify-content: space-evenly;
